<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tvShow"
            type="com.alexandernsalim.moviecatalogue.data.TvShowEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="@dimen/med_padding">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_poster"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:contentDescription="@string/poster"
            android:src="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="10dp" />

        <ImageView
            android:id="@+id/iv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sm_margin"
            android:contentDescription="@string/release_date_label"
            android:src="@drawable/ic_calendar"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintTop_toTopOf="@id/iv_poster" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsm_margin"
            android:text="@{tvShow.firstAirDate}"
            android:textAlignment="center"
            android:textSize="@dimen/sz_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_calendar"
            app:layout_constraintStart_toEndOf="@+id/iv_calendar"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            tools:text="@string/release_date" />

        <ImageView
            android:id="@+id/iv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xsm_margin"
            android:contentDescription="@string/duration_label"
            android:src="@drawable/ic_time"
            app:layout_constraintStart_toStartOf="@id/iv_calendar"
            app:layout_constraintTop_toBottomOf="@id/iv_calendar" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsm_margin"
            android:text="@{tvShow.duration}"
            android:textAlignment="center"
            android:textSize="@dimen/sz_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_time"
            app:layout_constraintStart_toEndOf="@id/iv_time"
            app:layout_constraintTop_toTopOf="@id/iv_time"
            tools:text="@string/duration" />

        <RatingBar
            android:id="@+id/rb_user_score"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/med_margin"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3"
            android:stepSize="0.1"
            app:layout_constraintBottom_toBottomOf="@id/tv_duration"
            app:layout_constraintStart_toEndOf="@id/tv_duration"
            app:layout_constraintTop_toTopOf="@id/tv_duration" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_time"
            app:layout_constraintTop_toBottomOf="@+id/iv_time" />

        <TextView
            android:id="@+id/tv_overview_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textSize="@dimen/sz_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{tvShow.overview}"
            android:textSize="@dimen/sz_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_label"
            tools:text="@string/sample_overview" />

        <TextView
            android:id="@+id/tv_cast_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast_label"
            android:textSize="@dimen/sz_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_label" />

        <TextView
            android:id="@+id/tv_season_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seasons"
            android:textSize="@dimen/sz_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_cast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_season_label"
            tools:listitem="@layout/item_season" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
